--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,9 +52,9 @@
   </style>
 </head>
 <body class2="d-flex flex-column h-100" class="ps-md-sbwidth bg-light">
-<nav id="sidebar" class="sidebar offcanvas-start offcanvas-md" tabindex="-1">
+<nav id="sidebar" class="sidebar offcanvas-start offcanvas-md" tabindex="-1" style="cursor: context-menu;">
   <div class="offcanvas-header border-bottom border-secondary border-opacity-25">
-    <a href="/" class2="nav nav-item nav-link text-muted me-auto" class="sidebar-brand" style2="padding-left:0;">
+    <div class2="nav nav-item nav-link text-muted me-auto" class="sidebar-brand" style2="padding-left:0;">
       <img
           src="https://tradeaudit.app/assets/images/favicon.png"
           style="border-radius:20%;"
@@ -70,7 +70,7 @@
             style="font-size: small;margin-top: 0;padding-left:2px;"
         >For Android</span>
       </div>
-    </a>
+    </div>
     <button type="button" class="btn-close d-md-none" data-bs-dismiss="offcanvas" aria-label="Close"
             data-bs-target="#sidebar"></button>
   </div>
